Fix mis-aligned box-collapse on posts page.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -36,6 +36,7 @@ html {
       outline: 0 none;
   }
   body {
+    width: 100%;
     hr { margin-left: 0; margin-top: 15px;}
     h1, h2, h3, h4 {color: $font_color_header;}
     a, p, small {color: $font_color_basic;}
@@ -54,6 +55,7 @@ html {
       padding: 20px;
       background-color: $background;
       .list_of_posts {
+        width: 86%;
         .all_posts {
           #iso_content {
             .isotope-item {
